--- a/demo.html
+++ b/demo.html
@@ -1,39 +1,106 @@
 <!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
+<!-- saved from url=(0033)http://5.tga.plu.cn/test/ellipsis -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Ellipsis</title>
     <style type="text/css">
         p {
-            font-size:18px;
-            font-family:'Microsoft YaHei';
-            overflow:hidden;
-            width:200px;
-            line-height:24px;
-            height:48px;
-            float:left;
-            border:1px solid navy;
+            font-size: 18px;
+            font-family: 'Microsoft YaHei';
+            overflow: hidden;
+            width: 200px;
+            line-height: 24px;
+            height: 48px;
+            float: left;
+            border: 1px solid navy;
+            -ms-word-break: break-all;
+            word-break: break-all;
+            margin:10px;
         }
     </style>
 </head>
 <body>
     <div>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
         <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
-            中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd
+            不超出不超出
         </p>
-        <p>
-            中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
         </p>
-        <p>
-            中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不超出不超出
         </p>
-        <p>
-            中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd,中文支持不支持(adf)asd
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不超出不超出
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不超出不超出
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不超出不超出
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不超出不超出
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不超出不超出
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不超出不超出
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">中文支持不支持(adf)asd,中文支持不支持(adf)asasdfasdf中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...中文支持不支持(adf)asd,中文支持不支持(adf)as...</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不超出不超出
+        </p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <p data-ellipsis="true" data-ellipsis-max-width="200" data-ellipsis-max-line="2">
+            不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
         </p>
     </div>
-    <script src="/Scripts/jquery-1.9.1.js"></script>
-    <script src="/Scripts/jquery.ellipsis.js"></script>
-    <script src="/Scripts/jquery.ellipsis.unobtrusive.js"></script>
-</body>
-</html>
+<script src="jquery.min.js"></script>
+
+<script src="jquery.ellipsis.js"></script>
+<script src="jquery.ellipsis.unobtrusive.js"></script>
+<script>
+    $.fn.ellipsis.debug = true;
+    // costs less then 200ms for this case
+</script>
+
+</body></html>
