--- a/demo.html
+++ b/demo.html
@@ -94,7 +94,7 @@
             不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点不自动加点
         </p>
     </div>
-<script src="jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
 <script src="jquery.ellipsis.js"></script>
 <script src="jquery.ellipsis.unobtrusive.js"></script>
